<resources>
    <string name="app_name">Album Share</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_login">Login</string>
    <string name="title_activity_inbox">Inbox</string>
    <string name="title_activity_signup">Sign Up</string>
    <string name="title_activity_album">Album</string>

    <string name="emailHint">name@email.com</string>
    <string name="passwordHint">password</string>
    <string name="action_logout">Log Out</string>
    <string name="title_activity_setting">Settings</string>
    <string name="facebook_app_id">1034906983234435</string>
    <string name="title_activity_account_setting">Profile Setting</string>
    <string name="title_activity_message">Compose Message</string>

    <string name="hello_world">Hello world!</string>
    <string name="title_activity_createalbum_">Album Details</string>
    <string name="post">Create At</string>
    <string name="date">Update At</string>
    <string name="title">Title</string>
    <string name="author">Creator</string>

    <string name="title_activity_message_detail">Message Detail</string>
    <string name="title_activity_creatingnewalbum">Create New Album</string>
    <string name="title_activity_album_detail_acitivity">Album Details</string>
    <string name="title_activity_settingsalbum">Settings</string>
    <string name="action_album_setting">Album Setting</string>
    <string name="action_pending">Pending Photo</string>
    <string name="title_activity_pending_photo">Pending Photos</string>
    <string name="title_activity_photo_detail">PhotoDetailActivity</string>
    <string name="action_refresh">Refresh</string>

</resources>