<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" tools:context=".Album">
    <item android:id="@+id/createnewalbum"
        android:title="Create New Album"
        android:icon="@drawable/ic_action_add_album"
        app:showAsAction="always"/>
    <item android:id="@+id/gridOrList"
        android:title="Grid"
        android:icon="@drawable/ic_stat_grid"
        app:showAsAction="always"/>


    <item android:id="@+id/action_pending" android:title="@string/action_pending"
        android:orderInCategory="100" app:showAsAction="never" />
    <item android:id="@+id/action_settings" android:title="@string/action_settings"
    android:orderInCategory="100" app:showAsAction="never" />
    <item android:id="@+id/action_refresh" android:title="@string/action_refresh"
        android:orderInCategory="100" app:showAsAction="never" />

    <item android:id="@+id/action_logout" android:title="@string/action_logout"
        android:orderInCategory="100" app:showAsAction="never" />
</menu>
