<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/albumCV">
        <LinearLayout
            android:id="@+id/listAll"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_margin="@dimen/listViewMargin"
            android:contextClickable="false">

            <ImageView
                android:id="@+id/imageView_lv_image"
                android:layout_width="90dp"
                android:layout_height="100dp"
                android:src="@drawable/ic_action_default_icon"
                android:layout_weight=".8"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="15"
                android:paddingLeft="10dp"
                android:orientation="vertical">


                <TextView
                    android:id="@+id/textView_lv_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/title"
                    android:textSize="@dimen/titleTextSize"
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    android:gravity="center"/>



                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/post"
                        android:id="@+id/textView_lv_createDate"/>
                    <TextView
                        android:id="@+id/textView_lv_updateDate"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/date" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <TextView
                        android:id="@+id/textView_lv_creator"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/author"
                        android:layout_marginTop="@dimen/listViewMargin"/>
                </LinearLayout>

            </LinearLayout>
        </LinearLayout>
    </android.support.v7.widget.CardView>
</LinearLayout>